Added burning grass and ash blocks for fire functionality.